<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_new_task"
        app:navigationIcon="@drawable/ic_nav_bf"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Margens laterais e central para a caixa de input -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />
    <!--  ===================================== -->

    <!-- Input Título da tarefa -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/TextInputLayout.roundedCorner"
        android:hint="@string/label_title_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="@string/label_title_example" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  ===================================== -->

    <!-- Input Descrição da tarefa -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/TextInputLayout.roundedCorner"
        android:hint="@string/label_description_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:maxHeight="350dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="350dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            tools:text="@string/label_description_example" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  ===================================== -->

    <!-- Input Data da tarefa -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/TextInputLayout.roundedCorner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_date_hint"
        app:startIconDrawable="@drawable/ic_calendar"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/til_time" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  ===================================== -->

    <!-- Input Hora da tarefa -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        style="@style/TextInputLayout.roundedCorner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_hour_hint"
        app:startIconDrawable="@drawable/ic_clock"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  ===================================== -->

    <!-- Botão Cancelar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_create"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:cornerRadius="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <!-- Botão Criar Tarefa -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_new_task"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>